# Up3d-tinkering

./: .gitignore  CMakeLists.txt  README.md  subdir_cmake.txt
UP3DCOMMON/: up3dcomm.c  up3dconf.c
UP3DPARSE/: make.sh
UP3DTOOLS/: togcode.c
kscheff/: CMakeLists.txt  README.md  build-and-test.sh
kscheff/UP3DPARSE/: convg.c
kscheff/UP3DTOOLS/: capture.c  make.sh
kscheff/UP3DTRANSCODE/: make.sh  umcwriter.c
maik/UP3DCOMMON/: up3d.c
maik/UP3DTOOLS/: upload.c
